# SGH-LP1

./: .gitignore  CMakeLists.txt  Date.cpp  Date.h  MedicalFile.cpp  MedicalFile.h  Patient.cpp  Patient.h  README.md  User.cpp  main.cpp  run  run.sh
data/: hospital.db  manager.txt  test.db
include/: Appointment.h  Date.h  Doctor.h  HospitalDatabase.h  Interface.h  MedicalFile.h  Patient.h  Schedule.h  ScheduledAppointments.h  Session.h  Time.h  User.h  WorkSchedule.h  WorkSession.h
include/HospitalDatabase/: HospitalDatabase.h
include/Time/: Appointment.h  Schedule.h  ScheduledAppointments.h  Session.h  Time.h  WorkSchedule.h  WorkSession.h
include/Users/: Attendant.h  Doctor.h  Manager.h  Patient.h  User.h
include/utils/: text.h
src/: Appointment.cpp  Date.cpp  Doctor.cpp  HospitalDatabase.cpp  Interface.cpp  Manager.cpp  MedicalFile.cpp  Patient.cpp  Schedule.cpp  ScheduledAppointments.cpp  Session.cpp  Time.cpp  User.cpp  WorkSchedule.cpp  WorkSession.cpp  main.cpp
src/HospitalDatabase/: HospitalDatabase.cpp
src/HospitalDatabase/AppointmentMethods/: createMethods.cpp  deleteMethods.cpp  listMethods.cpp
src/HospitalDatabase/ScheduleMethods/: getMethods.cpp
src/HospitalDatabase/UserMethods/: attendantDatabaseMethods.cpp  doctorDatabaseMethods.cpp  managerDatabaseMethods.cpp  (+1 more)
src/Interfaces/: LoginInterface.cpp  MainInterface.cpp  SignInInterface.cpp
src/Time/: Appointment.cpp  Date.cpp  Schedule.cpp  ScheduledAppointments.cpp  Session.cpp  Time.cpp  WorkSchedule.cpp  WorkSession.cpp
src/Users/: Attendant.cpp  User.cpp
src/utils/: text.cpp
(+16 files in other folders)
